# cli

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  README2.md  plugins.json  pyproject.toml
ccli/: main.py
che/: main.py
data/: DolarHoy.pickle  JSONPlaceholder.pickle  MercadoLibre.pickle  VideoSizeReducer.pickle
docker/: Dockerfile  docker-compose.yml
plugins/: VideoSizeReducer.sh  dolar_hoy.sh  videoPlugin.sh
