[tool.poetry]
name = "che"
version = "0.1.0"
description = ""
authors = ["Lucas Vittor <lvvittor@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
che = "che.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
openai = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
