[tool.poetry]
name = "che"
version = "0.1.0"
description = ""
authors = ["Lucas Vittor <lvvittor@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
che = "che.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
openai = "^0.27.2"
simple-term-menu = "^1.6.1"
inquirer = "^3.1.3"
pyperclip = "^1.8.2"
langchain = "^0.0.86"
faiss-cpu = "^1.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
